Fixed CSS to prevent overflow
Fixed CSS of all policy pages to prevent overflow. As well as images in for-solicitor, and heading in coming-soon

--- a/css/legal-utopia.webflow.css
+++ b/css/legal-utopia.webflow.css
@@ -1123,7 +1123,7 @@ li {
   -ms-flex-align: center;
   align-items: center;
 
-}  
+}
 
 .title-wrap-centre {
   display: -webkit-box;
@@ -1738,7 +1738,7 @@ li {
   -ms-flex-direction: column;
   flex-direction: column;
   color: #fff;
-  
+
 }
 
 .title-wrap-centre-center {
@@ -1922,6 +1922,11 @@ li {
   overflow: hidden;
   padding: 100px 3%;
   /* background-color: #f5f7ff; */
+}
+
+.CSh3{
+  font-size:42px;
+  margin-top: 50px;
 }
 
 @media screen and (min-width: 1920px) {
@@ -2261,7 +2266,17 @@ li {
     margin-top: 20px;
     margin-left: 0px;
   }
+  .CSh3{
+    font-size: 5vw;
+  }
 }
+
+/* .CSh3{
+  font-size:42px;
+  margin-top: 50px;
+} */
+
+
 
 @media screen and (max-width: 479px) {
   .header {
@@ -2892,7 +2907,7 @@ li {
   width: 250px;
 }
 
-.floating {  
+.floating {
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
@@ -2904,7 +2919,7 @@ li {
 @keyframes floating {
     from { transform: translate(0,  0px); }
     65%  { transform: translate(0, 25px); }
-    to   { transform: translate(0, 0px); }    
+    to   { transform: translate(0, 0px); }
 }
 
 .rounded {
@@ -2928,41 +2943,41 @@ li {
     width: 70%;
     margin-left: 31.6%;
   }
-  
+
   .text_right_career{
     display: inline-block;
     width: 65%;
     margin-left: 35.6%;
   }
-  
+
    .text_right_clipboard{
     display: inline-block;
     width: 80%;
     margin-left: 26.6%;
   }
-  
+
   .text_left {
     display: inline-block;
     width: 75%;
     margin-right: 31.6%;
   }
-  
-  
+
+
   .sol_text_right{
     width: 70%;
     margin-left: 31.6%;
   }
-  
+
   .graphic_auth{
-      text-align: center; 
+      text-align: center;
       position: relative;
       margin-top: 15%;
-      top: 50%; 
+      top: 50%;
       left: 240px;
       transform: translate(-50%, -50%);
   }
-  
-  
+
+
  .re-size_img_left {
     position: absolute;
     top: 110px; left: 0px; right: 90px; bottom: 0px;
